--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tuas-portfolio",
   "version": "0.1.0",
+  "homepage": "https://TuaTuivai.github.io/My-Portfolio/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -39,7 +40,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "homepage": "https://your-github-username.github.io/My-Portfolio/"
+    ]
+    
   }
 }
