added new what2game to portfolio

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tuas-portfolio",
+  "name": "My-Portfolio",
   "version": "0.1.0",
   "homepage": "https://TuaTuivai.github.io/My-Portfolio/",
   "private": true,
